# BA-AD-rs

./: .gitignore  Cargo.toml  README.md  media_parser.py  pyproject.toml  resource_downloader.py  ruff.toml  table_parser.py
.github/docs/: CHANGELOG.md  FAQ.md  LIBRARY.md  USAGE.md
.github/workflows/: build.yml  release.yml
baad/: __init__.py  __main__.py
baad/FlatData/: AcademyFavorScheduleExcelTable.py  AcademyLocationExcelTable.py  AcademyLocationRankExcelTable.py  AcademyMessanger1Excel.py  AcademyMessanger1ExcelTable.py  AcademyMessanger2Excel.py  AcademyMessanger2ExcelTable.py  AcademyMessanger3Excel.py  AcademyMessanger3ExcelTable.py  AcademyMessangerExcel.py  AcademyMessangerExcelTable.py  AcademyRewardExcel.py  AcademyRewardExcelTable.py  AcademyTicketExcelTable.py  AcademyZoneExcel.py  AcademyZoneExcelTable.py  AccountAchievementType.py  AccountLevelExcel.py  AccountLevelExcelTable.py  AddressableBlackListExcelTable.py  AddressableWhiteListExcelTable.py  AmplifyDoTRemoveCondition.py  AniStateData.py  AnimationBlendTable.py  AnimatorData.py  AnimatorDataTable.py  ArenaLevelSectionExcel.py  ArenaLevelSectionExcelTable.py  ArenaMapExcelTable.py  ArenaNPCExcel.py  ArenaNPCExcelTable.py  ArenaRewardExcelTable.py  ArenaSeasonCloseRewardExcelTable.py  ArenaSeasonExcelTable.py  ArmorType.py  AssistEchelonTypeConvertExcel.py  AssistEchelonTypeConvertExcelTable.py  AttendanceExcel.py  AttendanceExcelTable.py  AttendanceRewardExcelTable.py  (+769 more)
baad/lib/: CatalogDecrypter.py  MediaParser.py  MersenneTwister.py  StringCipher.py  TableEncryptionService.py  TableParser.py  TableService.py  XXHashService.py
baad/lib/flatbuf/: BlueArchive.fbs
baad/lib/memorypack/: MemoryPack.cs
baad/public/: TableCatalog.json  bundleDownloadInfo.json
baad/utils/: ApkParser.py  AssetExtracter.py  CatalogFetcher.py  CatalogFilter.py  CatalogList.py  CatalogParser.py  DBExtracter.py  FlatbufGenerator.py  MemoryPackGenerator.py  Progress.py  ResourceDownloader.py  StudioExtracter.py  TableExtracter.py
src/: lib.rs  main.rs
src/apk/: api.rs  extract.rs  fetch.rs  mod.rs
src/catalog/: fetch.rs  mod.rs  parse.rs
src/cli/: args.rs  mod.rs  parse.rs
src/crypto/: catalog.rs  crc.rs  hash.rs  memorypack.rs  mod.rs  table_encryption.rs  xxhash.rs
src/download/: downloader.rs  filter.rs  mod.rs
src/helpers/: api.rs  args.rs  config.rs  download_manager.rs  error.rs  file.rs  interface.rs  json.rs  log.rs  logs.rs  macros.rs  mod.rs  network.rs  progress.rs
src/lib/: file.rs
src/utils/: apk.rs  catalog_fetcher.rs  catalog_parser.rs  download.rs  downloader.rs  file.rs  json.rs  mod.rs  network.rs
