[package]
name = "baad"
version = "2.0.0"
edition = "2024"

[lib]
name = "baad"
path = "src/lib.rs"

[[bin]]
name = "baad"
path = "src/main.rs"

[dependencies]
reqwest = "0.12.20"
regex = "1.11.1"
anyhow = "1.0.98"
platform-dirs = "0.3.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
paris = { version = "1.5.15", features = ["timestamps", "macros"] }

trauma = { git = "https://github.com/RZinth/trauma" }
walkdir = "2.5.0"
zip = "4.1.0"