[package]
name = "baad"
version = "2.1.4"
edition = "2024"

[lib]
name = "baad"
path = "src/lib.rs"

[[bin]]
name = "baad"
path = "src/main.rs"

[features]
default = []
no_logs = [ "baad-core/no_logs" ]
no_debug = [ "baad-core/no_debug" ]
no_error = [ "baad-core/no_error" ]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
anyhow = "1.0.98"
platform-dirs = "0.3.0"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
zip = "4.1.0"
base64 = "0.22.1"
lazy-regex = "3.4.1"
glob = "0.3.2"
nucleo = "0.5.0"
clap = { version = "4.5.40", features = ["derive"] }

bacy = { git = "https://github.com/Deathemonic/BA-CY", version = "1.3.2" }
trauma = { git = "https://github.com/RZinth/trauma", version = "2.6.0", features = ["rustls"] }  # Using a custom trauma
baad-core = { git = "https://github.com/RZinth/BA-AD-Core", version = "0.0.2" }
