[project]
name = "BA-AD"
version = "2.1.0"
description = "Blue Archive Asset Downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "cloudscraper>=1.2.71",
    "flatbuffers>=24.3.25",
    "pycryptodome>=3.21.0",
    "rapidfuzz>=3.10.1",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "unitypy>=1.20.12",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baad"]

[project.scripts]
baad = "baad.__main__:main"
